<resources>
    <string name="app_name">ImageFeed</string>
    <string name="app_default_invalid_input">Invalid input.</string>

    <string name="add_image_menu_item_title">Add image</string>
    <string name="add_image_url_title">Image URL:</string>
    <string name="add_image_name_title">Name:</string>
    <string name="add_image_date_title">Date:</string>
    <string name="add_image_tags_title">Tags:</string>
    <string name="add_image_image_preview">Image about to be added by the user</string>
    <string name="add_image_button">Add image</string>

    <string name="add_image_empty_input">Field musn\'t be empty.</string>
    <string name="add_image_invalid_date">Invalid date.</string>
    <string name="add_image_future_date">Date can\'t be in the future.</string>

    <string name="single_elem_image_description">Image added by the user</string>
    <string name="single_elem_name_title">Name:</string>
    <string name="single_elem_date_title">Date:</string>
    <string name="single_elem_tags_title">Tags:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
