<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addimage.AddImage"
        android:id="@+id/addImageLayout">

    <!-- TODO: also take care of this imageview boi and its height -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="275dp"
            android:id="@+id/addImageImagePreview"
            android:layout_marginTop="@dimen/app_default_top_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:contentDescription="@string/add_image_image_preview"/>

    <TextView
            android:text="@string/add_image_url_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageUrlTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintBottom_toBottomOf="@+id/addImageUrlInput"
            android:layout_marginTop="@dimen/app_default_top_margin"
            app:layout_constraintTop_toTopOf="@+id/addImageUrlInput"/>

    <TextView
            android:text="@string/add_image_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageNameTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintTop_toTopOf="@+id/addImageNameInput"
            app:layout_constraintBottom_toBottomOf="@+id/addImageNameInput"/>

    <TextView
            android:text="@string/add_image_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageDateTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintTop_toTopOf="@+id/addImageDatePreview"
            app:layout_constraintBottom_toBottomOf="@+id/addImageDatePreview"/>

    <TextView
            android:text="@string/add_image_tags_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageTagsTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            app:layout_constraintTop_toBottomOf="@+id/addImageDatePicker"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addImageUrlInput"
            app:layout_constraintStart_toEndOf="@+id/addImageUrlTitle"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/app_default_small_font_size"
            android:layout_marginTop="@dimen/app_default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/addImageImagePreview"
            android:inputType="text|textUri"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addImageNameInput"
            android:textSize="@dimen/app_default_small_font_size"
            app:layout_constraintStart_toEndOf="@+id/addImageNameTitle"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginTop="@dimen/app_default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/addImageUrlInput"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem"
            android:inputType="textNoSuggestions"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_default_small_font_size"
            android:id="@+id/addImageDatePreview"
            app:layout_constraintStart_toEndOf="@+id/addImageDateTitle"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintEnd_toStartOf="@+id/addImageDatePicker"
            app:layout_constraintBottom_toBottomOf="@+id/addImageDatePicker"
            app:layout_constraintTop_toTopOf="@+id/addImageDatePicker"
            tools:text="@tools:sample/date/ddmmyy"
            android:focusableInTouchMode="true"
            android:focusable="true"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addImageTagsPreview"
            app:layout_constraintTop_toBottomOf="@+id/addImageDatePicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/addImageTagsTitle"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            android:layout_marginBottom="@dimen/add_image_bottom_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onAddImageClicked"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@android:drawable/ic_menu_today"
            android:id="@+id/addImageDatePicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            android:layout_marginTop="@dimen/app_default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/addImageNameInput"
            android:onClick="onAddImageDatePickerClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>