<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".photoactivity.fragments.DetailsFragment"
                                                   android:layout_centerVertical="true"
                                                   android:layout_gravity="center"
                                                   android:layout_centerInParent="true"
                                                   android:layout_centerHorizontal="true"
                                                   android:background="@color/colorPrimaryLight">

    <TextView
            android:text="@string/single_elem_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/darkText"/>

    <TextView
            android:text="@string/single_elem_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:textColor="@color/darkText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/single_elem_tags_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/darkText"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/name"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewStart"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateValue"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/date"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewStart"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tagsValue"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateValue"
            app:layout_constraintStart_toEndOf="@+id/date2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>