<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:paddingBottom="@dimen/single_elem_padding_top_bottom"
                                                   android:paddingTop="@dimen/single_elem_padding_top_bottom" android:id="@+id/singleElemLayout">
    <!-- TODO: layout height doesn't wrap content well actually-->
    <!-- TODO: clear margins and use DividerItemDecorator-->
    <ImageView
            android:layout_width="0dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/singleElemImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/single_elem_image_description"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/app_default_top_margin"
            android:layout_marginStart="@dimen/app_default_left_right_margin"
            android:layout_marginEnd="@dimen/app_default_left_right_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singleElemImage"
            android:id="@+id/singleElementData"
            android:background="@color/colorPrimaryLight">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemDateValue"
                app:layout_constraintStart_toEndOf="@+id/singleElemDateTitle"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                android:layout_marginTop="@dimen/app_default_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/app_default_left_right_margin"
                android:textColor="@color/lightText"
                android:textSize="@dimen/app_default_small_font_size"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:text="@string/single_elem_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemTagsTitle"
                android:layout_marginTop="@dimen/app_default_top_margin"
                app:layout_constraintTop_toBottomOf="@+id/singleElemDateTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/app_default_bottom_margin"
                android:textColor="@color/darkText"
                android:textSize="@dimen/app_default_small_font_size"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemNameValue"
                app:layout_constraintStart_toEndOf="@+id/singleElemNameTitle"
                android:layout_marginTop="@dimen/app_default_top_margin"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="@dimen/app_default_left_right_margin"
                android:textColor="@color/lightText"
                android:textSize="@dimen/app_default_small_font_size"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="@dimen/single_elem_guideline_percent"/>

        <TextView
                android:text="@string/single_elem_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemNameTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                android:layout_marginTop="@dimen/app_default_top_margin"
                android:textColor="@color/darkText"
                android:textSize="@dimen/app_default_small_font_size"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:text="@string/single_elem_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemDateTitle"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                android:layout_marginTop="@dimen/app_default_top_margin"
                android:textColor="@color/darkText"
                android:textSize="@dimen/app_default_small_font_size"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/singleElemTagsValue"
                app:layout_constraintStart_toEndOf="@+id/singleElemTagsTitle"
                android:layout_marginStart="@dimen/app_default_left_right_margin"
                android:layout_marginTop="@dimen/app_default_top_margin"
                app:layout_constraintTop_toBottomOf="@+id/singleElemDateValue"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/app_default_left_right_margin"
                android:layout_marginBottom="@dimen/app_default_bottom_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/lightText"
                android:textSize="@dimen/app_default_small_font_size"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>